recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value level
  avance(length/(3*level))
                   ^Koch:14: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(levels-1)
            ^Koch:16: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
  	snowSide(levels-1)
                ^Koch:18: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(levels-1)
            ^